# deep_search_sweet_tooth_guard_agent

./: README.md  main.py  makefile  pyproject.toml
src/deep_research/: manager.py
src/deep_research/report_writer/: report_writer.py  types.py
src/deep_research/web_research_designer/: designer.py  types.py
src/deep_research/web_research_executor/: executor.py
src/refiner/: eat_guard.py  factory.py  guard.py  interfaces.py  refiner.py  runner.py  types.py
src/ui/: create_pdf.py  deep_research.py  first_submit.py  reset.py  state.py  validate_inputs.py
test/refiner/: test_runner.py
